include/ishtar.h

struct ishtar_class_t;
struct call_frame_t;
struct ishtar_module_t;
typedef struct decimal_t { uint64_t h; uint64_t l; } decimal_t;
typedef uint16_t half_t;
typedef enum class_flag_t {
    CLASS_NONE = 0,
    CLASS_PUBLIC = 2,
    CLASS_STATIC = 4,
    CLASS_INTERNAL = 8,
    CLASS_PROTECTED = 16,
    CLASS_PRIVATE = 32,
    CLASS_ABSTRACT = 64,
    CLASS_SPECIAL = 128,
    CLASS_INTERFACE = 256,
    CLASS_ASPECT = 512,
    CLASS_UNDEFINED = 1024,
    CLASS_UNRESOLVED = 2048,
    CLASS_PREDEFINED = 4096,
    CLASS_NOTCOMPLETED = 8192,
    CLASS_AMORPHOUS = 16384,
} class_flag_t;
typedef struct ishtar_version_t {
    uint32_t major;
    uint32_t minor;
    uint32_t patch;
    uint32_t build;
} ishtar_version_t;
typedef struct ishtar_frames_t {
    struct call_frame_t* module_loader_frame;
    struct call_frame_t* entry_point;
    struct call_frame_t* jit;
    struct call_frame_t* garbage_collector;
    struct call_frame_t* native_loader;
} ishtar_frames_t;
typedef struct ishtar_rtoken_t {
    uint64_t value;
    uint32_t module_i_d;
    uint32_t class_i_d;
} ishtar_rtoken_t;
typedef struct ishtar_string_t {
    uint64_t id;
    uint64_t i_d;
} ishtar_string_t;
typedef struct call_frame_t {
    struct call_frame_t* self;
    struct call_frame_t* parent;
    struct ishtar_method_t* method;
    int32_t level;
    void* return_value;
    void* args;
    ishtar_opcode_e last_ip;
    struct ishtar_callframe_exception_t exception;
} call_frame_t;
typedef struct ishtar_types_t {
    struct ishtar_class_t* object_class;
    struct ishtar_class_t* value_type_class;
    struct ishtar_class_t* void_class;
    struct ishtar_class_t* string_class;
    struct ishtar_class_t* byte_class;
    struct ishtar_class_t* s_byte_class;
    struct ishtar_class_t* int32_class;
    struct ishtar_class_t* int16_class;
    struct ishtar_class_t* int64_class;
    struct ishtar_class_t* u_int32_class;
    struct ishtar_class_t* u_int16_class;
    struct ishtar_class_t* u_int64_class;
    struct ishtar_class_t* half_class;
    struct ishtar_class_t* float_class;
    struct ishtar_class_t* double_class;
    struct ishtar_class_t* decimal_class;
    struct ishtar_class_t* bool_class;
    struct ishtar_class_t* char_class;
    struct ishtar_class_t* array_class;
    struct ishtar_class_t* exception_class;
    struct ishtar_class_t* raw_class;
    struct ishtar_class_t* aspect_class;
    struct ishtar_class_t* function_class;
    struct ishtar_class_t* range_class;
    void* all;
    void* mapping;
} ishtar_types_t;
typedef struct ishtar_class_t {
    void* _self_reference;
    void* methods;
    void* fields;
    void* aspects;
    struct ishtar_module_t* owner;
    struct ishtar_class_t* parent;
    void* full_name;
    bool _is_disposed;
    int32_t type_code;
    class_flag_t flags;
    struct ishtar_rtoken_t runtime_token;
    uint32_t i_d;
    uint16_t magic1;
    uint16_t magic2;
    uint64_t computed_size;
    bool is_inited;
    void* vtable;
    uint64_t vtable_size;
} ishtar_class_t;
typedef struct stack_union {
    union { /* Offset: 0 */
        int8_t b;
        int16_t s;
        int32_t i;
        int64_t l;
        uint8_t ub;
        uint16_t us;
        uint32_t ui;
        uint64_t ul;
        float f_r4;
        double f;
        decimal_t d;
        half_t hf;
        size_t p;
    };
} stack_union;
typedef struct stackval {
    struct stack_union data;
    int32_t type;
} stackval;
typedef struct ishtar_trace_t {
    bool use_console;
    bool use_file;
} ishtar_trace_t;
typedef struct RuntimeInfo {
    bool is_windows;
    bool is_linux;
    bool is_o_s_x;
    bool is_free_b_s_d;
    int32_t architecture;
} RuntimeInfo;
typedef struct LLVMContext {
    void* _ctx;
    void* _ffi_module;
    void* _execution_engine;
} LLVMContext;
typedef struct ishtar_threading_t {
    void* threads;
} ishtar_threading_t;
typedef struct vm_t {
    struct ishtar_string_t* name;
    struct ishtar_frames_t* frames;
    ishtar_trace_t trace;
    struct LLVMContext jitter;
    struct ishtar_types_t* types;
    struct ishtar_threading_t threading;
    struct ishtar_scheduler_t* task_scheduler;
    struct ishtar_module_t* internal_module;
    struct ishtar_class_t* internal_class;
} vm_t;
typedef struct ishtar_scheduler_t {
    uint64_t task_index;
    void* async_header;
    size_t loop;
    void* _queue;
} ishtar_scheduler_t;
typedef struct ishtar_module_t {
    void* vault;
    uint32_t i_d;
    struct ishtar_version_t version;
    void* alias_table;
    void* class_table;
    void* deps_table;
    void* aspects_table;
    void* types_table;
    void* generics_table;
    void* fields_table;
    void* string_table;
    void* const_storage;
    struct ishtar_string_t* _name;
    struct ishtar_module_t* _self;
    struct ishtar_class_t* bootstrapper;
} ishtar_module_t;