include/ishtar.rs

#[test]
fn bindgen_test_layout_stack_union__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<stack_union__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<stack_union__bindgen_ty_1>(),
        16usize,
        concat!("Size of: ", stringify!(stack_union__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<stack_union__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(stack_union__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).b) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(b)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).s) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(s)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(i)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).l) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(l)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ub) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(ub)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).us) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(us)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ui) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(ui)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ul) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(ul)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).f_r4) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(f_r4)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).f) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(f)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).d) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hf) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(hf)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).p) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stack_union__bindgen_ty_1),
            "::",
            stringify!(p)
        )
    );
}
#[test]
fn bindgen_test_layout_stack_union() {
    assert_eq!(
        ::std::mem::size_of::<stack_union>(),
        16usize,
        concat!("Size of: ", stringify!(stack_union))
    );
    assert_eq!(
        ::std::mem::align_of::<stack_union>(),
        8usize,
        concat!("Alignment of ", stringify!(stack_union))
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct stackval {
    pub data: stack_union,
    pub type_: i32,
}
#[test]
fn bindgen_test_layout_stackval() {
    const UNINIT: ::std::mem::MaybeUninit<stackval> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<stackval>(),
        24usize,
        concat!("Size of: ", stringify!(stackval))
    );
    assert_eq!(
        ::std::mem::align_of::<stackval>(),
        8usize,
        concat!("Alignment of ", stringify!(stackval))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(stackval),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(stackval),
            "::",
            stringify!(type_)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_trace_t {
    pub use_console: bool,
    pub use_file: bool,
}
#[test]
fn bindgen_test_layout_ishtar_trace_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_trace_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_trace_t>(),
        2usize,
        concat!("Size of: ", stringify!(ishtar_trace_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_trace_t>(),
        1usize,
        concat!("Alignment of ", stringify!(ishtar_trace_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).use_console) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_trace_t),
            "::",
            stringify!(use_console)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).use_file) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_trace_t),
            "::",
            stringify!(use_file)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeInfo {
    pub is_windows: bool,
    pub is_linux: bool,
    pub is_o_s_x: bool,
    pub is_free_b_s_d: bool,
    pub architecture: i32,
}
#[test]
fn bindgen_test_layout_RuntimeInfo() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeInfo> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeInfo>(),
        8usize,
        concat!("Size of: ", stringify!(RuntimeInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeInfo>(),
        4usize,
        concat!("Alignment of ", stringify!(RuntimeInfo))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).is_windows) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInfo),
            "::",
            stringify!(is_windows)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).is_linux) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInfo),
            "::",
            stringify!(is_linux)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).is_o_s_x) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInfo),
            "::",
            stringify!(is_o_s_x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).is_free_b_s_d) as usize - ptr as usize },
        3usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInfo),
            "::",
            stringify!(is_free_b_s_d)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).architecture) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInfo),
            "::",
            stringify!(architecture)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LLVMContext {
    pub _ctx: *mut ::std::os::raw::c_void,
    pub _ffi_module: *mut ::std::os::raw::c_void,
    pub _execution_engine: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_LLVMContext() {
    const UNINIT: ::std::mem::MaybeUninit<LLVMContext> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<LLVMContext>(),
        24usize,
        concat!("Size of: ", stringify!(LLVMContext))
    );
    assert_eq!(
        ::std::mem::align_of::<LLVMContext>(),
        8usize,
        concat!("Alignment of ", stringify!(LLVMContext))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._ctx) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LLVMContext),
            "::",
            stringify!(_ctx)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._ffi_module) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(LLVMContext),
            "::",
            stringify!(_ffi_module)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._execution_engine) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(LLVMContext),
            "::",
            stringify!(_execution_engine)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_threading_t {
    pub threads: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_ishtar_threading_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_threading_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_threading_t>(),
        8usize,
        concat!("Size of: ", stringify!(ishtar_threading_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_threading_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_threading_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).threads) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_threading_t),
            "::",
            stringify!(threads)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vm_t {
    pub name: *mut ishtar_string_t,
    pub frames: *mut ishtar_frames_t,
    pub trace: ishtar_trace_t,
    pub jitter: LLVMContext,
    pub types: *mut ishtar_types_t,
    pub threading: ishtar_threading_t,
    pub task_scheduler: *mut ishtar_scheduler_t,
    pub internal_module: *mut ishtar_module_t,
    pub internal_class: *mut ishtar_class_t,
}
